# ros2_rclpy_template_package

./: Dockerfile  README.md  package.xml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
ros2_rclpy_template_package/: simple_publisher.py
test/: test_node.py
